--- a/BlazorServer/.gitignore
+++ b/BlazorServer/.gitignore
@@ -69,3 +69,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+*.db
+*.db-shm
+*-db-wal
